--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     </div>
     <p class="text-center m-5">
-        Featured Project which my best projects be choice to show
+        My best featured projects I choose to show the world
       </p>
       <div class="container">
         <div class="row mb-5">
